[f] 430 - Fix Requested button display on mobile
https://www.pivotaltracker.com/story/show/97478430

--- a/common/static/sass/style.sass
+++ b/common/static/sass/style.sass
@@ -796,7 +796,7 @@ footer
 
 @media screen and (max-width: 1024px)
   .btn.btn-request:not(.btn-link):not(.btn-flat)
-    width: 100%
+    width: 90%
     max-width: 100%
 
 #filter-row
